Import of BOXPHERE/Method-Cached-0.03 from CPAN.
gitpan-cpan-distribution: Method-Cached
gitpan-cpan-version:      0.03
gitpan-cpan-path:         BOXPHERE/Method-Cached-0.03.tar.gz
gitpan-cpan-author:       BOXPHERE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Method::Cached
 
+0.030   Wed, 26 Nov 2008 16:08:06 +0900
+        - added method of deleting cache
+        - parameter of hash is supported
+
 0.020   Fri, 31 Oct 2008 15:59:35 +0900
         - first release
 
