Import of BOXPHERE/Method-Cached-0.04 from CPAN.
gitpan-cpan-distribution: Method-Cached
gitpan-cpan-version:      0.04
gitpan-cpan-path:         BOXPHERE/Method-Cached-0.04.tar.gz
gitpan-cpan-author:       BOXPHERE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Method::Cached
 
+0.040   Thu, 27 Nov 2008 14:24:44 +0900
+        - change concerning generation rule of key
+
 0.030   Wed, 26 Nov 2008 16:08:06 +0900
         - added method of deleting cache
         - parameter of hash is supported
